--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Weekday Ruler WebGL builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Weekday Ruler WebGL builds.data.br",
-        frameworkUrl: buildUrl + "/Weekday Ruler WebGL builds.framework.js.br",
-        codeUrl: buildUrl + "/Weekday Ruler WebGL builds.wasm.br",
+        dataUrl: buildUrl + "/Weekday Ruler WebGL builds.data",
+        frameworkUrl: buildUrl + "/Weekday Ruler WebGL builds.framework.js",
+        codeUrl: buildUrl + "/Weekday Ruler WebGL builds.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Copious Studios",
         productName: "Weekday Ruler",
