--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Weekday Ruler WebGL builds.loader.js";
+      var loaderUrl = buildUrl + "/Weekday-Ruler.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Weekday Ruler WebGL builds.data",
-        frameworkUrl: buildUrl + "/Weekday Ruler WebGL builds.framework.js",
-        codeUrl: buildUrl + "/Weekday Ruler WebGL builds.wasm",
+        dataUrl: buildUrl + "/Weekday-Ruler.data.gz",
+        frameworkUrl: buildUrl + "/Weekday-Ruler.framework.js.gz",
+        codeUrl: buildUrl + "/Weekday-Ruler.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Copious Studios",
         productName: "Weekday Ruler",
