--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Weekday-Ruler.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Weekday-Ruler.data.gz",
-        frameworkUrl: buildUrl + "/Weekday-Ruler.framework.js.gz",
-        codeUrl: buildUrl + "/Weekday-Ruler.wasm.gz",
+        dataUrl: buildUrl + "/Weekday-Ruler.data",
+        frameworkUrl: buildUrl + "/Weekday-Ruler.framework.js",
+        codeUrl: buildUrl + "/Weekday-Ruler.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Copious Studios",
         productName: "Weekday Ruler",
